# crosswind

./: .editorconfig  .gitignore  .hgignore  .pylintrc  3to2  INSTALL  LICENSE  Makefile  README  README.md  RELEASE  __init__.py  main.py  pyproject.toml  pytest.ini  python2.patch  setup.py  test_all_fixers.py
.github/workflows/: main.yml  py2verify.yml
3to2/fixes/: fix_range.py
crosswind/: btm_matcher.py  btm_utils.py  build.py  crosswind  find_pattern.py  fixer_base.py  fixer_util.py  fixer_util_3to2.py  main.py  patcomp.py  pygram.py  pytree.py  refactor.py
crosswind/fixes/: fix_division.py  fix_printfunction.py  imports_fix_alt_formatting.py
crosswind/lib2to3/: __main__.py  cpython_version  fixer_util.py  pygram.py  refactor.py
crosswind/lib3to2/: fixer_util.py
crosswind/pgen2/: driver.py  grammar.py  literals.py  parse.py  pgen.py  tokenize.py
crosswind/tests/: __init__.py  pytree_idempotency.py  support.py  test_absimport.py  test_arg_parsing.py  test_classdecorator.py  test_collections.py  test_dctsetcomp.py  test_fixtures.py  test_getcwd.py  test_imports.py  test_imports2.py  test_input.py  test_int.py  test_kwargs.py  test_main.py  test_memoryview.py  test_metaclass.py  test_methodattrs.py  test_newstyle.py  test_next.py  test_numliterals.py  test_parser.py  test_print.py  test_printfunction.py  test_pytree.py  test_range.py  test_refactor.py  test_setliteral.py  test_throw.py  test_unittest.py  test_util.py  test_with.py
fixes/: fix_input.py
lib3to2/: build.py  fixer_util.py  main.py  refactor.py
lib3to2/fixes/: feature_base.py  fix_absimport.py  fix_annotations.py  fix_bool.py  fix_bytes.py  fix_classdecorator.py  fix_collections.py  fix_dctsetcomp.py  fix_division.py  fix_except.py  fix_features.py  fix_features_test.py  fix_funcattrs.py  fix_getcwd.py  fix_imports.py  fix_imports2.py  fix_imports_py2k.py  fix_imports_test.py  fix_input.py  fix_int.py  fix_intern.py  fix_itertools.py  fix_kwargs.py  fix_memoryview.py  fix_metaclass.py  fix_methodattrs.py  fix_newstyle.py  fix_next.py  fix_numliterals.py  fix_print.py  fix_printfunction.py  fix_raise.py  fix_range.py  fix_reduce.py  fix_setliteral.py  fix_str.py  fix_super.py  fix_throw.py  fix_unpacking.py  fix_zip.py  (+2 more)
lib3to2/tests/: lib2to3_fixertestcase.py  refactor.py  support.py  test_all_fixers.py  test_annotations.py  test_bitlength.py  test_bool.py  test_bytes.py  test_classdecorator.py  test_collections.py  test_dctsetcomp.py  test_division.py  test_except.py  test_fullargspec.py  test_funcattrs.py  test_getcwd.py  test_imports.py  test_imports2.py  test_imports_test.py  test_input.py  test_int.py  test_intern.py  test_itertools.py  test_kwargs.py  test_memoryview.py  test_metaclass.py  test_methodattrs.py  test_newstyle.py  test_next.py  test_numliterals.py  test_open.py  test_print.py  test_printfunction.py  test_raise.py  test_range.py  test_reduce.py  test_setliteral.py  test_str.py  test_super.py  test_throw.py  (+4 more)
py2verify/: Makefile  __init__.py  pyproject.toml  test_apply.py  test_bitlength.py  test_class_decorators.py  test_comprehensions.py  test_dict.py  test_division.py  test_exceptions.py  test_exec.py  test_future_division.py  test_idioms.py  test_import.py  test_inequalities.py  test_itertools_imports.py  test_open.py  test_operators.py  test_renames.py  test_repr.py  test_unicode.py  testmodule.py
(+325 files in other folders)
