[tool.poetry]
name = "crosswind"
version = "0.1.0"
homepage = "https://github.com/ryanwersal/crosswind"
description = "Convert between Python 2 and 3 in both directions"
license = "Apache-2.0"
authors = [
	"Ryan Wersal <ryan@ryanwersal.com>",
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Topic :: Software Development :: Code Generators",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
	{ include = "crosswind" },
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4"
rope = "^0.14.0"
vulture = "^1.1"

[tool.poetry.scripts]
crosswind = "crosswind.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
