[tool.poetry]
name = "crosswind"
version = "0.1.0"
homepage = "https://github.com/ryanwersal/crosswind"
description = "Convert between Python 2 and 3 in both directions"
license = "Apache-2.0"
authors = [
    "Ryan Wersal <ryan@ryanwersal.com>",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "crosswind" },
]

[tool.poetry.dependencies]
python = ">=3.6"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4"
rope = "^0.14.0"
vulture = "^1.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"

[tool.poetry.scripts]
crosswind = "crosswind.main:main"

[tool.black]
line-length = 120
target-version = ["py36"]
exclude = '''
(
\.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| \.vscode
| \.pytest_cache
| __pycache__
| build
| dist
| data
| acceptance
| py2verify
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
skip_glob = [
    "build",
    "dist",
    "data",
    "acceptance",
    "py2verify",
]
atomic = true

[tool.crosswind.preset.2to3]
fixer_suites = [
    "fixer_suites.two_to_three",
]

[tool.crosswind.preset.3to2]
fixer_suites = [
    "fixer_suites.three_to_two",
]
print_function = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
