[tool.poetry]
name = "py2verify"
version = "0.1.0"
description = ""
authors = ["Ryan Wersal <ryan@ryanwersal.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "=4.6.6"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
